Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.1
-
None
-
linux x64
-
-
11eea3aae0e936ecbb1081ab4f2201cc6e69fea0
Description
Ctrl+click definition does nothing because editor logic explicitly prevents it.
Now that we have language client this is nonsensual, since same exact action is performed by pressing F2, just without consideration to the check.
Here's a patch to fix this.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-22693 CMD-mouse does not go to definition with language server but F2 works
-
- Closed
-