TextEditor: skip update link on mouse press events

The link is updated on the release anyway. Reset the press state of
the link now after a mouse move event.

Fixes: QTCREATORBUG-21848
Change-Id: Ice7a9873b1635a1b59ba7b8f2a266bf14e28c112
Reviewed-by: Christian Stenger <christian.stenger@qt.io>